resolve #339 Edited css of AccordionMenuTasks and ProjectMenuAccordion in order to align the content.

--- a/group3_frontend/src/components/accordianMenuTasks/AccordionMenuTasks.css
+++ b/group3_frontend/src/components/accordianMenuTasks/AccordionMenuTasks.css
@@ -169,3 +169,7 @@
 .accordion-menu-tasks .table.table-content > thead:hover {
     background: none;
 }
+
+#taskContent{
+   vertical-align: text-top
+}
