--- a/group3_frontend/src/pages/tasks/activeTeam.css
+++ b/group3_frontend/src/pages/tasks/activeTeam.css
@@ -12,6 +12,7 @@
     font-size: 12px;
     font-family: 'Oxygen', sans-serif;
     font-weight: bolder;
+    padding-top: 5px;
 }
 .table.table-hover.taskteam > tbody > tr > td {
     text-align: left;
