--- a/group3_frontend/src/pages/tasks/editTask/EditTask.css
+++ b/group3_frontend/src/pages/tasks/editTask/EditTask.css
@@ -33,3 +33,7 @@
     color: red;
       display: hide
   }
+
+  #projectTasksTitle{
+margin-top: 5px;
+  }
